# Sudoku

./: Autofill.c  Autofill.h  Board.c  Board.h  CMakeLists.txt  Edit.c  Edit.h  FileManager.c  FileManager.h  Game.c  Game.h  Generate.c  Generate.h  History.c  History.h  ILP.c  ILP.h  Init.c  Init.h  Interface.h  MainAux.c  MainAux.h  ManageMode.c  ManageMode.h  Parser.c  Parser.h  README.md  Solve.c  Solve.h  Stack.c  Stack.h  TestGame.c  TestGame.h  ValidBoard.c  ValidBoard.h  main.c  makefile
